# eod

./: .gitmodules  CMakeLists.txt  build.sh  eod.js  index.html  main.c
.github/workflows/: deploy.yml
src/: main.c  mem.c  mem.h
